--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,33 +14,31 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    timeout-minutes: 50    
     strategy:
       fail-fast: false
       matrix:
         redis:
           - 6.2.4
-          - 7.2.0
+          - 7.0.0
         rust:
           - stable
           - beta
           - nightly
-          - 1.65.0
+          - 1.59.0
 
     steps:
-
     - name: Cache redis
       id: cache-redis
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: |
-          ~/redis-cli
-          ~/redis-server
-        key: ${{ runner.os }}-${{ matrix.redis }}-redis
+          /usr/bin/redis-cli
+          /usr/bin/redis-server
+        key: ${{ runner.os }}-redis
 
     - name: Cache RedisJSON
       id: cache-redisjson
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: |
           /tmp/librejson.so
@@ -52,29 +50,25 @@ jobs:
         sudo apt-get update
         wget https://github.com/redis/redis/archive/${{ matrix.redis }}.tar.gz;
         tar -xzvf ${{ matrix.redis }}.tar.gz;
-        pushd redis-${{ matrix.redis }} && BUILD_TLS=yes make && sudo mv src/redis-server src/redis-cli $HOME && popd;
+        pushd redis-${{ matrix.redis }} && BUILD_TLS=yes make && sudo mv src/redis-server src/redis-cli /usr/bin/ && popd;
         echo $PATH
 
-    - name: set PATH
-      run: |
-        echo "$HOME" >> $GITHUB_PATH
-
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain/@master
+    - name: Install latest nightly
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: ${{ matrix.rust }}
+        override: true
         components: rustfmt
 
-    - uses: Swatinem/rust-cache@v2
-
-    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v1
+    - uses: actions/checkout@v2
 
     - name: Run tests
       run: make test
 
     - name: Checkout RedisJSON
-      if: steps.cache-redisjson.outputs.cache-hit != 'true' && matrix.redis != '6.2.4'
-      uses: actions/checkout@v4
+      if: steps.cache-redisjson.outputs.cache-hit != 'true'
+      uses: actions/checkout@v2
       with:
         repository: "RedisJSON/RedisJSON"
         path: "./__ci/redis-json"
@@ -94,7 +88,7 @@ jobs:
       # This shouldn't cause issues in the future so long as no profiles or patches
       # are applied to the workspace Cargo.toml file
     - name: Compile RedisJSON
-      if: steps.cache-redisjson.outputs.cache-hit != 'true' && matrix.redis != '6.2.4'
+      if: steps.cache-redisjson.outputs.cache-hit != 'true'
       run: |
         cp ./Cargo.toml ./Cargo.toml.actual
         echo $'\nexclude = [\"./__ci/redis-json\"]' >> Cargo.toml
@@ -104,7 +98,6 @@ jobs:
         rm -rf ./__ci/redis-json
 
     - name: Run module-specific tests
-      if: matrix.redis != '6.2.4'
       run: make test-module
 
     - name: Check features
@@ -121,66 +114,23 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain/@master
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: stable
+          override: true
           components: rustfmt, clippy
-      - uses: Swatinem/rust-cache@v2
-      - run: cargo fmt --all -- --check
-        name: fmt
-
-      - run: cargo clippy --all-features --all-targets -- -D warnings
-        name: clippy
+      - uses: Swatinem/rust-cache@v1
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-features --all-targets -- -D warnings
       - name: doc
         run: cargo doc --no-deps --document-private-items
         env:
           RUSTDOCFLAGS: -Dwarnings
-
-  benchmark:
-    if: ${{ github.event_name == 'pull_request' }}
-    runs-on: ubuntu-latest
-    env:
-      redis_ver: 7.0.0
-      rust_ver: stable
-    steps:
-
-    - name: Cache redis
-      id: cache-redis
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/redis-cli
-          ~/redis-server
-        key: ${{ runner.os }}-${{ env.redis_ver }}-redis
-
-    - name: Install redis
-      if: steps.cache-redis.outputs.cache-hit != 'true'
-      run: |
-        sudo apt-get update
-        wget https://github.com/redis/redis/archive/${{ env.redis_ver }}.tar.gz;
-        tar -xzvf ${{ env.redis_ver }}.tar.gz;
-        pushd redis-${{ env.redis_ver }} && BUILD_TLS=yes make && sudo mv src/redis-server src/redis-cli /usr/bin/ && popd;
-        echo $PATH
-
-    - name: set PATH
-      run: |
-        echo "$HOME" >> $GITHUB_PATH
-
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain/@master
-      with:
-        toolchain: ${{ env.rust_ver }}
-
-    - uses: Swatinem/rust-cache@v2
-
-    - uses: actions/checkout@v4
-
-    - name: Benchmark
-      run: |
-        cargo install critcmp
-        cargo bench --all-features -- --measurement-time 15 --save-baseline changes
-        git fetch
-        git checkout ${{ github.base_ref }} 
-        cargo bench --all-features -- --measurement-time 15 --save-baseline base
-        critcmp base changes
