--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redis"
-version = "0.24.0"
+version = "0.23.0"
 keywords = ["redis", "database"]
 description = "Redis driver for Rust."
 homepage = "https://github.com/redis-rs/redis-rs"
@@ -8,15 +8,12 @@ repository = "https://github.com/redis-rs/redis-rs"
 documentation = "https://docs.rs/redis"
 license = "BSD-3-Clause"
 edition = "2021"
-rust-version = "1.65"
+rust-version = "1.59"
 readme = "../README.md"
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
-
-[lib]
-bench = false
 
 [dependencies]
 # These two are generally really common simple dependencies so it does not seem
@@ -41,13 +38,11 @@ bytes = { version = "1", optional = true }
 futures-util = { version = "0.3.15", default-features = false, optional = true }
 pin-project-lite = { version = "0.2", optional = true }
 tokio-util = { version = "0.7", optional = true }
-tokio = { version = "1", features = ["rt", "net", "time"], optional = true }
-socket2 = { version = "0.4", default-features = false, optional = true }
+tokio = { version = "1", features = ["rt", "net"], optional = true }
 
 # Only needed for the connection manager
 arc-swap = { version = "1.1.0", optional = true }
 futures = { version = "0.3.3", optional = true }
-tokio-retry = { version = "0.3.0", optional = true }
 
 # Only needed for the r2d2 feature
 r2d2 = { version = "0.8.8", optional = true }
@@ -65,40 +60,32 @@ tokio-native-tls = { version = "0.3", optional = true }
 async-native-tls = { version = "0.4", optional = true }
 
 # Only needed for rustls
-rustls = { version = "0.22", optional = true }
-webpki-roots = { version = "0.26", optional = true }
-rustls-native-certs = { version = "0.7", optional = true }
-tokio-rustls = { version = "0.25", optional = true }
-futures-rustls = { version = "0.25", optional = true }
-rustls-pemfile = { version = "2", optional = true }
-rustls-pki-types = { version = "1", optional = true }
+rustls = { version = "0.21.0", optional = true }
+webpki-roots = { version = "0.23.0", optional = true }
+rustls-native-certs = { version = "0.6.2", optional = true }
+tokio-rustls = { version = "0.24.0", optional = true }
+futures-rustls = { version = "0.24.0", optional = true }
 
 # Only needed for RedisJSON Support
 serde = { version = "1.0.82", optional = true }
 serde_json = { version = "1.0.82", optional = true }
 
-# Only needed for bignum Support
-rust_decimal = { version = "1.33.1", optional = true }
-bigdecimal = { version = "0.4.2", optional = true }
-num-bigint = { version = "0.4.4", optional = true }
-
 # Optional aHash support
-ahash = { version = "0.8.6", optional = true }
+ahash = { version = "0.7.6", optional = true }
 
 log = { version = "0.4", optional = true }
-futures-time = { version = "3.0.0", optional = true }
 
 [features]
-default = ["acl", "streams", "geospatial", "script", "keep-alive"]
+default = ["acl", "streams", "geospatial", "script"]
 acl = []
-aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/alloc", "futures-util/sink", "tokio/io-util", "tokio-util", "tokio-util/codec", "tokio/sync", "combine/tokio", "async-trait", "futures-time"]
+aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/alloc", "futures-util/sink", "tokio/io-util", "tokio-util", "tokio-util/codec", "tokio/sync", "combine/tokio", "async-trait"]
 geospatial = []
 json = ["serde", "serde/derive", "serde_json"]
 cluster = ["crc16", "rand"]
 script = ["sha1_smol"]
 tls-native-tls = ["native-tls"]
-tls-rustls = ["rustls", "rustls-native-certs", "rustls-pemfile", "rustls-pki-types"]
-tls-rustls-insecure = ["tls-rustls"]
+tls-rustls = ["rustls", "rustls-native-certs"]
+tls-rustls-insecure = ["tls-rustls", "rustls/dangerous_configuration"]
 tls-rustls-webpki-roots = ["tls-rustls", "webpki-roots"]
 async-std-comp = ["aio", "async-std"]
 async-std-native-tls-comp = ["async-std-comp", "async-native-tls", "tls-native-tls"]
@@ -106,15 +93,9 @@ async-std-rustls-comp = ["async-std-comp", "futures-rustls", "tls-rustls"]
 tokio-comp = ["aio", "tokio", "tokio/net"]
 tokio-native-tls-comp = ["tokio-comp", "tls-native-tls", "tokio-native-tls"]
 tokio-rustls-comp = ["tokio-comp", "tls-rustls", "tokio-rustls"]
-connection-manager = ["arc-swap", "futures", "aio", "tokio-retry"]
+connection-manager = ["arc-swap", "futures", "aio"]
 streams = []
 cluster-async = ["cluster", "futures", "futures-util", "log"]
-keep-alive = ["socket2"]
-sentinel = ["rand"]
-tcp_nodelay = []
-rust_decimal = ["dep:rust_decimal"]
-bigdecimal = ["dep:bigdecimal"]
-num-bigint = ["dep:num-bigint"]
 
 # Deprecated features
 tls = ["tls-native-tls"] # use "tls-native-tls" instead
@@ -130,7 +111,7 @@ criterion = "0.4"
 partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
 quickcheck = "1.0.3"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
-tempfile = "=3.6.0"
+tempfile = "3.2"
 once_cell = "1"
 anyhow = "1"
 
@@ -157,9 +138,6 @@ required-features = ["json", "serde/derive"]
 name = "test_cluster_async"
 required-features = ["cluster-async"]
 
-[[test]]
-name = "test_bignum"
-
 [[bench]]
 name = "bench_basic"
 harness = false
@@ -169,11 +147,6 @@ required-features = ["tokio-comp"]
 name = "bench_cluster"
 harness = false
 required-features = ["cluster"]
-
-[[bench]]
-name = "bench_cluster_async"
-harness = false
-required-features = ["cluster-async", "tokio-comp"]
 
 [[example]]
 name = "async-multiplexed"
