--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "redis"
+name = "fluffici_redis"
 version = "0.23.0"
 keywords = ["redis", "database"]
 description = "Redis driver for Rust."
-homepage = "https://github.com/redis-rs/redis-rs"
-repository = "https://github.com/redis-rs/redis-rs"
+homepage = "https://github.com/NebraskyTheWolf/redis-rs"
+repository = "https://github.com/NebraskyTheWolf/redis-rs"
 documentation = "https://docs.rs/redis"
 license = "BSD-3-Clause"
 edition = "2021"
