--- a/redis-test/Cargo.toml
+++ b/redis-test/Cargo.toml
@@ -10,13 +10,13 @@ license = "BSD-3-Clause"
 rust-version = "1.59"
 
 [dependencies]
-redis = { version = "0.23.0", path = "../redis" }
+fluffici_redis = { version = "0.23.0", path = "../fluffici_redis" }
 
 bytes = { version = "1", optional = true }
 futures = { version = "0.3", optional = true }
 
 [features]
-aio = ["futures", "redis/aio"]
+aio = ["futures", "fluffici_redis/aio"]
 
 [dev-dependencies]
 fluffici_redis = { version = "0.23.0", path = "../fluffici_redis", features = ["aio", "tokio-comp"] }
